# Touch-Typing-Program

./: CMakeLists.txt  main.c  menu.ui
core/: app.c  app.h  arena.c  arena.h  cstr.c  cstr.h  error.h  file_util.c  file_util.h  global_manager.c  global_manager.h  heap_str.h  keyboard.c  keyboard.h  listener.c  listener.h  scene.c  scene.h  slice.c  slice.h  space.h  str_view.c  str_view.h  string.c  string.h  time_componet.c  time_componet.h  timer.c  timer.h  types.c  types.h  util.c  util.h  window.c  window.h
gc_widgets/: button.c  button.h  container.c  container.h  gc_list.c  gc_list.h  gc_types.h  gc_widget.c  gc_widget.h  gc_widget_destructors.h  include_me.h  scroll_window.c  scroll_window.h  text_field.c  text_field.h  text_view.c  text_view.h  types.h
libraries/: toml.c
project/: paths.h  project.h  text_loader.c  text_loader.h
project/scenes/: typing_scene.c  typing_scene.h
project_data/base_layouts/: qwerty.txt
project_data/layouts/: phate.layout
project_data/menus/: typing_scene.ui
project_data/word_lists/: english_200.txt
